--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,3 +5,4 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
