--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,6 +6,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.h2.console.settings.web-allow-others=true
 
 
 jwt.secret=segredojwt
