--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=create
 jwt.secret=${JWT_SECRET:segredojwt}
 springdoc.swagger-ui.path=/api-docs
 spring.jpa.properties.hibernate.format_sql=true
+cors.origins=${CORS_ORIGINS:http://localhost:8080,http://localhost:3000,http://localhost:5173}
