--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 springdoc.swagger-ui.path=/api-docs
-
+cors.origins=${CORS_ORIGINS:http://localhost:8080,http://localhost:3000,http://localhost:5173}
